--- a/css/style.css
+++ b/css/style.css
@@ -180,3 +180,11 @@ textarea {
 .footer .small {
   opacity: .75;
 }
+#map {
+  width: 100%;
+  height: 400px;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 10px 30px rgba(0,0,0,.08);
+  margin: 2rem 0;
+}
