--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,15 @@ textarea {
   box-shadow: 0 10px 30px rgba(0,0,0,.08);
   margin: 2rem 0;
 }
+.project-img {
+    width: 60%;
+    max-width: 900px;
+    height: auto;
+    margin: 0 auto;
+    display: block;
+}
+.project-img-webwiz2 {
+    width: 70%;
+    height: auto;
+    border-radius: 0.8rem;
+}
